# triagem-whatsapp-ai

./: .gitignore  pyproject.toml  requirements.txt
scripts/: init_database.py  run_server.py  test_message_flow.py  view_database.py
src/api/: main.py
src/api/routes/: conversations.py  health.py  leads.py  webhooks.py
src/api/schemas/: __init__.py  ai.py  conversation.py  lead.py  message.py  response.py  webhook.py
src/core/: config.py  exceptions.py  logging.py  security.py
src/domain/services/: lead_classifier.py  message_processor.py
src/infrastructure/ai/: client.py  prompts.py
src/infrastructure/database/: models.py  session.py
src/infrastructure/messaging/: whatsapp_client.py
